[TASK] Use Discussion Component Form section as Commenting form

--- a/Resources/Private/Layouts/Comment.html
+++ b/Resources/Private/Layouts/Comment.html
@@ -11,4 +11,5 @@
 
 <div class="tx-dialog tx-dialog-comment">
 	<f:render partial="Comment/Components" section="{view}" arguments="{_all}" />
+	<f:render partial="Discussion/Components" section="Form" arguments="{_all}" />
 </div>
