--- a/Resources/Private/Layouts/Comment.html
+++ b/Resources/Private/Layouts/Comment.html
@@ -21,7 +21,10 @@
 	</f:then>
 	<f:else>
 		<div class="tx-dialog tx-dialog-comment full">
-			<f:render partial="Comment/Components" section="{view}" arguments="{_all}" optional="TRUE" />
+			<f:for each="{discussion.posts}" as="post">
+				<f:render partial="Discussion/Components" section="Post"
+					arguments="{postItem: post, discussion: discussion, hideOptions: 1}" optional="TRUE" />
+			</f:for>
 			<f:render partial="Discussion/Components" section="Form" arguments="{_all}" />
 		</div>
 	</f:else>
