[FEATURE] Add "width" argument (array) to Comment Widget
Argument allows defining the sizes of the poster and post content columns respectively, in ranges from 1 to 12 (as per Bootstrap 12-column grid).

--- a/Resources/Private/Partials/Discussion/Components.html
+++ b/Resources/Private/Partials/Discussion/Components.html
@@ -247,18 +247,18 @@
 		<div class="row-fluid post{f:if(condition: offset, else: '-first')}">
 			<f:if condition="{offset}">
 				<f:then>
-					<div class="span2">
+					<div class="span{f:if(condition: width.poster, then: width.poster, else: 2)}">
 						<f:render section="Poster" arguments="{_all}" />
 					</div>
 					<div class="span{offset}">&nbsp;</div>
 				</f:then>
 				<f:else>
-					<div class="span2">
+					<div class="span{f:if(condition: width.poster, then: width.poster, else: 2)}">
 						<f:render section="Poster" arguments="{_all}" />
 					</div>
 				</f:else>
 			</f:if>
-			<div class="span{dialog:subtract(a: 10, b: offset)}">
+			<div class="span{dialog:subtract(a: '{f:if(condition: width.postContent, then: width.postContent, else: 10)}', b: offset)}">
 				<h4 class="subject">
 					{postItem.subject}
 				</h4>
