--- a/Resources/Private/Layouts/Comment.html
+++ b/Resources/Private/Layouts/Comment.html
@@ -23,7 +23,7 @@
 		<div class="tx-dialog tx-dialog-comment full">
 			<f:for each="{discussion.posts}" as="post">
 				<f:render partial="Discussion/Components" section="Post"
-					arguments="{postItem: post, discussion: discussion, hideOptions: 1}" optional="TRUE" />
+					arguments="{postItem: post, discussion: discussion, hideOptions: 1, width: width}" optional="TRUE" />
 			</f:for>
 			<f:render partial="Discussion/Components" section="Form" arguments="{_all}" />
 		</div>
