[TASK] Update styles for new Bootstrap version

--- a/Resources/Private/Layouts/Discussion.html
+++ b/Resources/Private/Layouts/Discussion.html
@@ -9,7 +9,7 @@
 </f:if>
 <fed:pageRenderer.addCssFile file="{f:uri.resource(path: 'Stylesheets/Common.css')}" compress="FALSE" />
 
-<div class="tx-dialog tx-dialog-discussion">
+<div class="tx-dialog tx-dialog-discussion form-horizontal">
 	<f:if condition="{settings.enableToolbar}">
 		<f:render partial="Discussion/Components" section="Toolbar" arguments="{_all}" />
 	</f:if>
