--- a/Resources/Public/Stylesheets/Common.css
+++ b/Resources/Public/Stylesheets/Common.css
@@ -31,6 +31,35 @@
     padding: 0px;
 }
 
+.tx-dialog .mini-layout label.control-label {
+	width: 40px;
+	text-align: left;
+}
+
+.tx-dialog .mini-layout .controls {
+	margin-left: 60px;
+}
+
+.tx-dialog .mini-layout .poster-name {
+	width: 210px;
+}
+
+.tx-dialog .mini-layout .poster-email {
+	width: 180px;
+}
+
+.tx-dialog .mini-layout .poster-web {
+	width: 150px;
+}
+
+.tx-dialog .mini-layout .words-form .control-label {
+	width: 100px;
+}
+
+.post-options input {
+	height: 14px !important;
+}
+
 .white {
     color: #FFFFFF !important;
 }
@@ -67,8 +96,13 @@ td.time {
 }
 
 .hero-unit-button .btn {
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin-top: 0px;
+}
+
+.hero-unit-button .btn.primary {
+	font-size: 16px;
+    margin-bottom: 5px;
+	width: 100%;
 }
 
 .poster h4, .poster p {
