--- a/Resources/Public/Stylesheets/Common.css
+++ b/Resources/Public/Stylesheets/Common.css
@@ -77,6 +77,10 @@
     padding-top: 1em;
 }
 
+.post-first p,
+.post .content p {
+	line-height: 1.5em;
+}
 .post-first {
     border-top: 1px solid #EFEFEF;
     padding-top: 1em;
